--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Edtech Marine
-    Services</title>
+    <title>Edtech Marine Services
+    </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -56,33 +56,33 @@
                         <a href="about.html">About</a>
                     </li>
                     <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-                          <ul class="dropdown-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
 
-                              <li>
-                                  <a href="spares.html">Stores and Spares</a>
-                              </li>
+                            <li>
+                                <a href="spares.html">Stores and Spares</a>
+                            </li>
 
-                              <li>
-                                  <a href="agency.html">Edtech Agency and Husbandry </a>
-                              </li>
-                              <li>
-                                  <a href="engineering.html">Edtech Engineering</a>
-                              </li>
-                              <li>
-                                  <a href="safety.html">Edtech Safety and Automation</a>
-                              </li>
-                              <li>
-                                  <a href="itservices.html">Edtech I.T Services</a>
-                              </li>
+                            <li>
+                                <a href="agency.html">Edtech Agency and Husbandry </a>
+                            </li>
+                            <li>
+                                <a href="engineering.html">Edtech Engineering</a>
+                            </li>
+                            <li>
+                                <a href="safety.html">Edtech Safety and Automation</a>
+                            </li>
+                            <li>
+                                <a href="itservices.html">Edtech I.T Services</a>
+                            </li>
 
-                          </ul>
-                      </li>
-                    <li>
-                      <a href="product.html">Products</a>
+                        </ul>
                     </li>
                     <li>
-                      <a href="careers.html">Careers</a>
+                        <a href="product.html">Products</a>
+                    </li>
+                    <li>
+                        <a href="careers.html">Careers</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact Us</a>
@@ -142,9 +142,9 @@
     </header>
 
     <!-- Page Content -->
- <div class="container-fluid" id="c1">
-  <h2 class="page-header" style="color:white"><b>Welcome to Edtech Marine Services</b></h2>
-</div>
+    <div class="container-fluid" id="c1">
+        <h2 class="page-header" style="color:white"><b>Welcome to Edtech Marine Services</b></h2>
+    </div>
 
 
 
@@ -159,198 +159,186 @@
             </div> -->
 
             <div class="col-md-4 col-sm-6">
-                <title>  About Us
-               </title>
+                <title> About Us
+                </title>
 
-               <h2><b>About Us</b> </h2>
+                <h2><b>About Us</b> </h2>
 
-                    <img id="i1" class="img-circle img-portfolio img-hover" src="images/edtech.jpg" alt="" width="350" height="300">
+                <img id="i1" class="img-circle img-portfolio img-hover" src="images/edtech.jpg" alt="" width="350" height="300">
 
                 <!-- </a> -->
 
 
             </div>
             <div class="col-md-4 col-sm-6">
-              <h2><b> Products </b></h2>
+                <h2><b> Products </b></h2>
                 <!-- <a href="product.html"> Continue Reading -->
-                    <img  id="i1"class="img-circle img-portfolio img-hover" src="images/safety_equipment.jpg" alt="" width="350" height="300">
+                <img id="i1" class="img-circle img-portfolio img-hover" src="images/safety_equipment.jpg" alt="" width="350" height="300">
                 <!-- </a> -->
             </div>
             <div class="col-md-4 col-sm-6">
-              <h2><b> Services </b></h2>
+                <h2><b> Services </b></h2>
                 <!-- <a href="services.html"> Continue Reading -->
-                    <img class="img-circle img-portfolio img-hover" src="images/Services.jpg" alt="" width="350" height="300">
+                <img class="img-circle img-portfolio img-hover" src="images/Services.jpg" alt="" width="350" height="300">
                 <!-- </a> -->
 
             </div>
 
         </div>
-        <!-- /.row -->
 
-        <!-- Features Section -->
-      <!--- <div class="row">
+
+
+        <hr id="head" width="70%">
+
+        <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Memberships & Brands</h2>
-            </div>
-            <div class="col-md-6">
-                <p id="p2">Memberships</p>
+                <h2 class="page-header" style="color: #0033cc"></h2>
 
             </div>
-            <div class="col-md-6">
-                <p id="p3"> Brands </p>
-            </div>
-        </div>---->
-
-
-<hr id="head" width="70%">
-
-        <div class="row">
-          <div class="col-lg-12">
-<h2 class="page-header" style="color: #0033cc"></h2>
-
-        </div>
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-lg-6">
+            <div class="col-md-6 col-lg-6">
 
-          <p id="j1" style="color:Maroon"> Memberships</p>
-          <div class="col-md-12">
-            <div class="images">
-         <a target="_blank" href="images/tn1.jpg" >
-            <img src="images/tn1.jpg" alt="Fjords" class="img-responsive"  width="170" height="100">
-         </a>
+                <p id="j1" style="color:Maroon"> Memberships</p>
+                <div class="col-md-12">
+                    <div class="images">
+                        <a target="_blank" href="images/tn1.jpg">
+                            <img src="images/tn1.jpg" alt="Fjords" class="img-responsive" width="170" height="100">
+                        </a>
+
+                    </div>
+                    <div class="images">
+                        <a target="_blank" href="images/bsafei.jpg">
+                            <img src="images/bsafei.jpg" alt="Forest1" class="img-responsive" width="170" height="100">
+                        </a>
+
+                    </div>
+                    <div class="images">
+                        <a target="_blank" href="images/fghjty.png">
+                            <img src="images/fghjty.png" alt="Fjords" class="img-responsive" width="170" height="100">
+                        </a>
+
+                    </div>
+                    <div class="images">
+                        <a target="_blank" href="images/bscic.jpg">
+                            <img src="images/bscic.jpg" alt="Forest1" class="img-responsive" width="170" height="100">
+                        </a>
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+            <div class="col-md-6 col-lg-6">
+
+                <p id="j2" style="color: Maroon"> Brands</p>
+                <div class="col-md-12">
+                    <div class="images brand-img">
+                        <a target="_blank" href="images/fang.jpg">
+                            <img src="images/fang.jpg" alt="Fjords" class="img-responsive">
+                        </a>
+
+                    </div>
+                    <div class="images brand-img">
+                        <a target="_blank" href="images/lal.png">
+                            <img src="images/lal.png" alt="Forest1" class="img-responsive">
+                        </a>
+
+                    </div>
+                    <div class="images brand-img">
+                        <a target="_blank" href="images/rong.jpg">
+                            <img src="images/rong.jpg" alt="Fjords" class="img-responsive">
+                        </a>
+
+                    </div>
+
+                    <div class="images brand-img">
+                        <a target="_blank" href="images/ningo.jpg">
+                            <img src="images/ningo.jpg" alt="Fjords" class="img-responsive">
+                        </a>
+
+                    </div>
+
+                    <div class="images brand-img">
+                        <a target="_blank" href="images/bcb_logo.jpg">
+                            <img src="images/bcb_logo.jpg" alt="Fjords" class="img-responsive">
+                        </a>
+
+                    </div>
+
+
+
+                </div>
+
+
+
+            </div>
+
+
+
 
         </div>
-        <div class="images">
-          <a target="_blank" href="images/bsafei.jpg">
-            <img  src="images/bsafei.jpg" alt="Forest1" class="img-responsive" width="170" height="100">
-          </a>
+    </div>
 
-        </div>
-        <div class="images">
-     <a target="_blank" href="images/fghjty.png" >
-        <img src="images/fghjty.png" alt="Fjords" class="img-responsive" width="170" height="100">
-     </a>
+    <div class- "container-fluid" id="c3">
 
     </div>
-    <div class="images">
-      <a target="_blank" href="images/bscic.jpg">
-        <img  src="images/bscic.jpg" alt="Forest1" class="img-responsive" width="170" height="100">
-      </a>
-
-    </div>
-
-        </div>
+    <hr id="head" width="70%">
 
 
+    <div class="container-fluid" id="c2">
+        <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
+        <!-- </div> -->
 
-  </div>
+        <div class="row color-blue">
 
-  <div class="col-md-6 col-lg-6">
-
-  <p id="j2" style="color: Maroon"> Brands</p>
-  <div class="col-md-12">
-    <div class="images brand-img">
- <a target="_blank" href="images/fang.jpg" >
-    <img src="images/fang.jpg" alt="Fjords" class="img-responsive" >
- </a>
-
-</div>
-<div class="images brand-img">
-  <a target="_blank" href="images/lal.png">
-    <img  src="images/lal.png" alt="Forest1" class="img-responsive" >
-  </a>
-
-</div>
-<div class="images brand-img">
-<a target="_blank" href="images/rong.jpg" >
-<img src="images/rong.jpg" alt="Fjords" class="img-responsive" >
-</a>
-
-</div>
-
-<div class="images brand-img">
-<a target="_blank" href="images/ningo.jpg" >
-<img src="images/ningo.jpg" alt="Fjords" class="img-responsive" >
-</a>
-
-</div>
-
-<div class="images brand-img">
-<a target="_blank" href="images/bcb_logo.jpg" >
-<img src="images/bcb_logo.jpg" alt="Fjords" class="img-responsive" >
-</a>
-
-</div>
-
-
-
-</div>
-
-
-
-</div>
-
-
-
-
-</div>
-</div>
-
-<div class-"container-fluid" id="c3">
-
-</div>
-<hr id="head" width="70%">
-
-<div class="container-fluid" id="c2">
- <h2 class="page-header" style="color:white" id="pg1"><b>Contact Us</b></h2>
-<!-- </div> -->
-
-  <div class="row color-blue">
-
-              <!-- <div class="col-lg-12">
-                  <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
-             </div> -->
-             <div class="col-md-3">
-                 <p style="font-size: 18px; color: white"> EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
+            <!-- <div class="col-lg-12">
+                        <h2 class="page-header" id="ph2" style="color: white">Contact Us</h2>
+                   </div> -->
+            <div class="col-md-3 flick">
+                <p style="font-size: 18px; color: white " > EDTECH LIFE SAVING / FIRE FIGHTING PRODUCTS</p>
                 <p style="font-size: 16px; color: white"> 1. Ms Wendy Wong, Marketing Executive </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
 
 
-                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
                 <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
 
 
 
-             </div>
+            </div>
 
 
-             <div class="col-md-3">
-                 <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES <br>SUPPLY </p>
+            <div class="col-md-3 flick">
+                <p style="font-size: 18px; color: white"> EDTECH STORES / SPARES
+                    <br>SUPPLY </p>
                 <p style="font-size: 16px; color: white"> 1. Ms Llanie, Purchase Manager </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980 </p>
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email:<u> info@edtech.com.sg</u></a></p>
 
 
-                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director  </p>
+                <p style="font-size: 16px; color: white"> 2. Mr Jagjit Singh, Director </p>
                 <p style="font-size: 16px; color: white"> HP: +65 98289531</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email:<u> jagjit@edtech.com.sg</u></a></p>
 
 
-             </div>
+            </div>
 
 
 
 
-             <div class="col-md-3">
-                 <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
-                <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer  </p>
+            <div class="col-md-3 flick">
+                <p style="font-size: 18px; color: white"> EDTECH ENGINEERING / SAFETY & AUTOMATION</p>
+                <p style="font-size: 16px; color: white"> 1.Mr Saini Singh, Engineer </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"><a href="mailto:repairs@edtech.com.sg">Email:<u> repairs@edtech.com.sg</u></a></p>
@@ -358,14 +346,15 @@
 
 
 
-             </div>
+            </div>
 
 
 
 
-             <div class="col-md-3">
-                 <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT <br>SERVICES </p>
-                <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist  </p>
+            <div class="col-md-3 flick">
+                <p style="font-size: 18px; color: white"> EDTECH AGENCY/IT
+                    <br>SERVICES </p>
+                <p style="font-size: 16px; color: white"> 1.Mr LP Singh, Agency Manager / IT Specialist </p>
                 <p style="font-size: 16px; color: white"> Tel: +65 6397 5980</p>
                 <p style="font-size: 16px; color: white"> Fax: +65 6397 5981</p>
                 <p style="font-size: 16px; color: white"> <a href="mailto:info@edtech.com.sg">Email: <u>info@edtech.com.sg</u></a></p>
@@ -375,29 +364,26 @@
                 <p style="font-size: 16px; color: white"><a href="mailto:jagjit@edtech.com.sg">Email: <u>jagjit@edtech.com.sg</u></a></p>
 
 
-             </div>
-
-
-
-
-             <!-- <div class="col-md-6">
-                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
-             </div> -->
-         </div>
-         </div>
-
-
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2016</p>
-                </div>
             </div>
-        </footer>
 
+
+
+
+
+        </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Your Website 2016</p>
+            </div>
+        </div>
+    </footer>
+
+
+
     <!-- /.container -->
 
     <!-- jQuery -->
@@ -408,9 +394,9 @@
 
     <!-- Script to Activate the Carousel -->
     <script>
-    $('.carousel').carousel({
-        interval: 2000 //changes the speed
-    })
+        $('.carousel').carousel({
+            interval: 2000 //changes the speed
+        })
     </script>
 
 </body>
